apps/growi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: growi-app
  labels:
    pod-security.kubernetes.io/enforce: privileged
