apps/growi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: growi
  namespace: growi-app
spec:
  ingressClassName: integrated-ingress
  rules:
  - host: growi.maesh.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: growi-growiapp-service
            port:
              number: 3000
